feat: add recomendation tags

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,9 @@
             content="Портфолио Frontend-разработчика из Екатеринбурга"
     />
     <meta name="yandex-verification" content="2033c8caf364cc0f"/>
+    <meta property="yandex_recommendations_tag" content="Разработчик Frontend"/>
+    <meta property="yandex_recommendations_tag" content="Сайт на заказ"/>
+    <meta property="yandex_recommendations_tag" content="Портфолио программмиста"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo1922.png"/>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
     <title>Рожков Максим | Frontend-разработчик</title>
